Java: Removed some deprecated warnings